--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 fastapi
-uvicorn
-langchain
-langchain-openai
-langchain-community
-chromadb
-tiktoken
+uvicorn[standard]
+gunicorn
+
+langchain>=0.1.20
+langchain-community>=0.0.30
+langchain-openai>=0.1.7
+langchain-text-splitters>=0.0.1
+
+chromadb>=0.4.22
 pydantic
 python-dotenv
