--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 fastapi
 uvicorn[standard]
 gunicorn
-
-langchain>=0.1.20
-langchain-community>=0.0.30
-langchain-openai>=0.1.7
-langchain-text-splitters>=0.0.1
-
-chromadb>=0.4.22
+langchain>=0.1.0
+langchain-community>=0.0.20
+langchain-openai>=0.0.8
+langchain-text-splitters
+chromadb
 pydantic
 python-dotenv
