--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi
-uvicorn[standard]
-gunicorn
-langchain>=0.1.0
-langchain-community>=0.0.20
-langchain-openai>=0.0.8
-langchain-text-splitters
-chromadb
-pydantic
-python-dotenv
+fastapi==0.103.1
+uvicorn[standard]==0.23.2
+gunicorn==21.2.0
+langchain==0.1.0
+langchain-community==0.0.10
+langchain-openai==0.0.2
+chromadb==0.4.15
+pydantic==2.4.2
+python-dotenv==1.0.0
+tiktoken==0.5.1
