--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ uvicorn[standard]==0.23.2
 gunicorn==21.2.0
 langchain==0.1.0
 langchain-community==0.0.10
-langchain-openai==0.0.2
+langchain-openai
+langchain-text-splitters
 chromadb==0.4.15
 pydantic==2.4.2
 python-dotenv==1.0.0
-tiktoken==0.5.1
+tiktoken
