--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-fastapi==0.103.1
-uvicorn[standard]==0.23.2
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
 gunicorn==21.2.0
 langchain==0.1.0
 langchain-community==0.0.10
 langchain-openai==0.0.2
-chromadb==0.4.15
-pydantic==2.4.2
+chromadb==0.4.22
+pydantic>=2.6.1
+pydantic-settings>=2.1.0
 python-dotenv==1.0.0
 tiktoken==0.5.2
